# Image_aesthetic_analysis

./: Floward_Inspection_Notebook.ipynb  Image_evaluation_manual.xlsx  README.md  Readme copy.md  code_comparison.xlsx  evaluate_images_metrics.py  floward_inspection_results.csv  requirement.txt  run_all.py
Aesthetics-Toolbox/: .debug_results.csv  QIP_machine_script.py  QIP_machine_script_bkp.py
Aesthetics-Toolbox/original_code/: 2D_FractalDimension_Spehar.m
Image_auto_scoring/: Q25VL7B-GPU.Modelfile  evaluate_images_ollama_full.py  requirements.txt  thresholds.yml
Image_enhancement/: image_enhancement_pipeline.py
aesthetics_eval_pkg/: README.md  docker-compose.yml  floward_threshold.yml  pyproject.toml  requirements.txt  schema.json  thresholds.yml
aesthetics_eval_pkg/aesthetics_eval/: cli.py  config.py  floward_eval.py  postprocess.py  provenance.py  select_model.py  similarity_eval.py  tasks.py  toolbox_runner.py
aesthetics_eval_pkg/aesthetics_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aesthetics_eval_pkg/docker/: Dockerfile
aesthetics_eval_pkg/scripts/: run_worker.sh  start_redis.sh
aesthetics_eval_pkg/tests/: test_postprocess.py  test_schema.py  test_thresholds.py
aesthetics_eval_pkg/tools/: verify_toolbox_alignment.py
images/: 12674_300736.jfif  12688_300724.jfif  25361_300679.jfif  25363_300661.jfif  8548_300742.jfif
notebooks/: 01_eval_validation.ipynb  01_eval_validation.py
notebooks/.ipynb_checkpoints/: 01_eval_validation-checkpoint.ipynb
